--- a/src/stella_vslam/feature/CMakeLists.txt
+++ b/src/stella_vslam/feature/CMakeLists.txt
@@ -4,9 +4,11 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/orb_params.h
                ${CMAKE_CURRENT_SOURCE_DIR}/orb_extractor.h
                ${CMAKE_CURRENT_SOURCE_DIR}/orb_extractor_node.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/orb_impl.h
                ${CMAKE_CURRENT_SOURCE_DIR}/orb_params.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/orb_extractor.cc
-               ${CMAKE_CURRENT_SOURCE_DIR}/orb_extractor_node.cc)
+               ${CMAKE_CURRENT_SOURCE_DIR}/orb_extractor_node.cc
+               ${CMAKE_CURRENT_SOURCE_DIR}/orb_impl.cc)
 
 # Install headers
 file(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
