--- a/example/euroc/EuRoC_stereo.yaml
+++ b/example/euroc/EuRoC_stereo.yaml
@@ -57,8 +57,7 @@ StereoRectifier:
 #=====================#
 
 Preprocessing:
-  max_num_keypoints: 1000
-  ini_max_num_keypoints: 2000
+  min_size: 800
 
 #================#
 # ORB Parameters #
