--- a/example/tum_rgbd/TUM_RGBD_rgbd_3.yaml
+++ b/example/tum_rgbd/TUM_RGBD_rgbd_3.yaml
@@ -33,8 +33,7 @@ Camera:
 #=====================#
 
 Preprocessing:
-  max_num_keypoints: 1000
-  ini_max_num_keypoints: 2000
+  min_size: 800
   depthmap_factor: 5000.0 # Note: Set it to 1.0 for the rosbag format data set.
 
 #================#
