--- a/example/tum_vi/TUM_VI_mono.yaml
+++ b/example/tum_vi/TUM_VI_mono.yaml
@@ -32,8 +32,7 @@ Camera:
 #=====================#
 
 Preprocessing:
-  max_num_keypoints: 1000
-  ini_max_num_keypoints: 2000
+  min_size: 800
 
 #================#
 # ORB Parameters #
