--- a/example/aist/equirectangular.yaml
+++ b/example/aist/equirectangular.yaml
@@ -45,6 +45,8 @@ Feature:
 Mapping:
   baseline_dist_thr_ratio: 0.02
   redundant_obs_ratio_thr: 0.95
+  num_covisibilities_for_landmark_generation: 20
+  num_covisibilities_for_landmark_fusion: 20
 
 #=========================#
 # LoopDetector Parameters #
