--- a/example/aist/fisheye.yaml
+++ b/example/aist/fisheye.yaml
@@ -57,3 +57,5 @@ Initializer:
 Mapping:
   baseline_dist_thr_ratio: 0.02
   redundant_obs_ratio_thr: 0.9
+  num_covisibilities_for_landmark_generation: 20
+  num_covisibilities_for_landmark_fusion: 20
