--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,8 @@ jobs:
       image: ghcr.io/ymd-stella/stella-cv/stella_vslam:cv-4.x
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: cmake and make with pangolin viewer
         run: |
           mkdir build
@@ -65,6 +67,8 @@ jobs:
       image: ghcr.io/ymd-stella/stella-cv/stella_vslam:cv-3.x
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: cmake and make
         run: |
           mkdir build
@@ -86,6 +90,8 @@ jobs:
       image: ghcr.io/ymd-stella/stella-cv/stella_vslam:cv-4.x
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: Create artifact directory
         run: |
           mkdir -p artifact
@@ -233,6 +239,8 @@ jobs:
       image: ghcr.io/ymd-stella/stella-cv/stella_vslam:cv-4.x
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: cmake and make
         run: |
           mkdir build
@@ -263,13 +271,13 @@ jobs:
       image: ghcr.io/ymd-stella/stella-cv/ros:foxy-ros-base
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: build ros2 packages
         run: |
           mkdir -p /ros_ws/src
           cp -r . /ros_ws/src/stella_vslam
-          cd /ros_ws/src/stella_vslam
-          git submodule update -i --recursive
-          cd ../..
+          cd /ros_ws/
           rosdep update
           apt update
           rosdep install -y -i --from-paths src
