--- a/src/stella_vslam/io/CMakeLists.txt
+++ b/src/stella_vslam/io/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(${PROJECT_NAME}
                PRIVATE
                ${CMAKE_CURRENT_SOURCE_DIR}/trajectory_io.h
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_base.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_factory.h
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_msgpack.h
                ${CMAKE_CURRENT_SOURCE_DIR}/map_database_io_sqlite3.h
                ${CMAKE_CURRENT_SOURCE_DIR}/trajectory_io.cc
