Remove camera_ from config

--- a/src/stella_vslam/camera/CMakeLists.txt
+++ b/src/stella_vslam/camera/CMakeLists.txt
@@ -2,6 +2,7 @@
 target_sources(${PROJECT_NAME}
                PRIVATE
                ${CMAKE_CURRENT_SOURCE_DIR}/base.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/camera_factory.h
                ${CMAKE_CURRENT_SOURCE_DIR}/perspective.h
                ${CMAKE_CURRENT_SOURCE_DIR}/fisheye.h
                ${CMAKE_CURRENT_SOURCE_DIR}/equirectangular.h
