--- a/src/stella_vslam/util/CMakeLists.txt
+++ b/src/stella_vslam/util/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Add sources
 target_sources(${PROJECT_NAME}
                PRIVATE
+               ${CMAKE_CURRENT_SOURCE_DIR}/angle.h
                ${CMAKE_CURRENT_SOURCE_DIR}/converter.h
                ${CMAKE_CURRENT_SOURCE_DIR}/fancy_index.h
                ${CMAKE_CURRENT_SOURCE_DIR}/image_converter.h
@@ -9,6 +10,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/string.h
                ${CMAKE_CURRENT_SOURCE_DIR}/trigonometric.h
                ${CMAKE_CURRENT_SOURCE_DIR}/yaml.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/angle.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/converter.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/image_converter.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/random_array.cc
