--- a/src/stella_vslam/util/CMakeLists.txt
+++ b/src/stella_vslam/util/CMakeLists.txt
@@ -6,6 +6,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/fancy_index.h
                ${CMAKE_CURRENT_SOURCE_DIR}/image_converter.h
                ${CMAKE_CURRENT_SOURCE_DIR}/random_array.h
+               ${CMAKE_CURRENT_SOURCE_DIR}/sqlite3.h
                ${CMAKE_CURRENT_SOURCE_DIR}/stereo_rectifier.h
                ${CMAKE_CURRENT_SOURCE_DIR}/string.h
                ${CMAKE_CURRENT_SOURCE_DIR}/trigonometric.h
@@ -14,6 +15,7 @@ target_sources(${PROJECT_NAME}
                ${CMAKE_CURRENT_SOURCE_DIR}/converter.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/image_converter.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/random_array.cc
+               ${CMAKE_CURRENT_SOURCE_DIR}/sqlite3.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/stereo_rectifier.cc
                ${CMAKE_CURRENT_SOURCE_DIR}/yaml.cc)
 
