--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 if(POLICY CMP0042)
     cmake_policy(SET CMP0042 NEW)
 endif()
+if(POLICY CMP0072)
+    cmake_policy(SET CMP0072 NEW)
+endif()
 if(POLICY CMP0074)
     cmake_policy(SET CMP0074 OLD)
 endif()
