--- a/example/aist/equirectangular.yaml
+++ b/example/aist/equirectangular.yaml
@@ -43,16 +43,25 @@ Feature:
 #====================#
 
 Mapping:
+  backend: "g2o"
   baseline_dist_thr_ratio: 0.02
   redundant_obs_ratio_thr: 0.95
   num_covisibilities_for_landmark_generation: 20
   num_covisibilities_for_landmark_fusion: 20
+
+#=====================#
+# Tracking Parameters #
+#=====================#
+
+Tracking:
+  backend: "g2o"
 
 #=========================#
 # LoopDetector Parameters #
 #=========================#
 
 LoopDetector:
+  backend: "g2o"
   enabled: true
   reject_by_graph_distance: true
   min_distance_on_graph: 50
