--- a/example/euroc/EuRoC_mono.yaml
+++ b/example/euroc/EuRoC_mono.yaml
@@ -1,9 +1,5 @@
 # EuRoC monocular model
 
-#==============#
-# Camera Model #
-#==============#
-
 Camera:
   name: "EuRoC monocular"
   setup: "monocular"
@@ -26,16 +22,8 @@ Camera:
 
   color_order: "Gray"
 
-#=====================#
-# Tracking Parameters #
-#=====================#
-
 Preprocessing:
   min_size: 800
-
-#================#
-# ORB Parameters #
-#================#
 
 Feature:
   name: "default ORB feature extraction setting"
@@ -44,10 +32,6 @@ Feature:
   ini_fast_threshold: 20
   min_fast_threshold: 7
 
-#====================#
-# Mapping Parameters #
-#====================#
-
 Mapping:
   backend: "g2o"
   baseline_dist_thr_ratio: 0.02
@@ -55,23 +39,14 @@ Mapping:
   num_covisibilities_for_landmark_generation: 20
   num_covisibilities_for_landmark_fusion: 20
 
-#=====================#
-# Tracking Parameters #
-#=====================#
-
 Tracking:
   backend: "g2o"
-
-#=========================#
-# LoopDetector Parameters #
-#=========================#
 
 LoopDetector:
   backend: "g2o"
 
-#===========================#
-# PangolinViewer Parameters #
-#===========================#
+System:
+  map_format: "msgpack"
 
 PangolinViewer:
   keyframe_size: 0.07
