Call find_package(SuiteSparse) only once

--- a/src/stella_vslam/CMakeLists.txt
+++ b/src/stella_vslam/CMakeLists.txt
@@ -48,13 +48,15 @@ else()
         include_directories(${CXSPARSE_INCLUDE_DIRS})
     endif()
     # SuiteSparse for g2o
-    if(MSVC)
-        find_package(SuiteSparse CONFIG)
-    else()
-        find_package(SuiteSparse)
-    endif()
-    if(SUITESPARSE_FOUND)
-        include_directories(${SUITESPARSE_INCLUDE_DIRS})
+    if(NOT SUITESPARSE_FOUND)
+        if(MSVC)
+            find_package(SuiteSparse CONFIG)
+        else()
+            find_package(SuiteSparse)
+        endif()
+        if(SUITESPARSE_FOUND)
+            include_directories(${SUITESPARSE_INCLUDE_DIRS})
+        endif()
     endif()
 endif()
 
