--- a/scripts/docker/ci/Dockerfile.desktop.ci
+++ b/scripts/docker/ci/Dockerfile.desktop.ci
@@ -38,8 +38,7 @@ RUN set -x && \
     libavcodec-dev \
     libavformat-dev \
     libavutil-dev \
-    libswscale-dev \
-    libavresample-dev && \
+    libswscale-dev && \
   : "backward-cpp dependencies" && \
   apt install -y -qq binutils-dev && \
   : "other dependencies" && \
