--- a/scripts/docker/ci/Dockerfile.desktop.ci
+++ b/scripts/docker/ci/Dockerfile.desktop.ci
@@ -83,7 +83,7 @@ RUN set -x && \
 ENV Eigen3_DIR=${CMAKE_INSTALL_PREFIX}/share/eigen3/cmake
 
 # g2o
-ARG G2O_COMMIT=ed40a5bb028566fd56a78fd7b04921b613492d6f
+ARG G2O_COMMIT=20230223_git
 WORKDIR /tmp
 RUN set -x && \
   git clone https://github.com/RainerKuemmerle/g2o.git && \
