--- a/example/euroc/EuRoC_mono.yaml
+++ b/example/euroc/EuRoC_mono.yaml
@@ -38,9 +38,12 @@ Mapping:
   redundant_obs_ratio_thr: 0.9
   num_covisibilities_for_landmark_generation: 20
   num_covisibilities_for_landmark_fusion: 20
+  erase_temporal_keyframes: false
+  num_temporal_keyframes: 15
 
 Tracking:
   backend: "g2o"
+  enable_temporal_keyframe_only_tracking: false
 
 LoopDetector:
   backend: "g2o"
