--- a/example/euroc/EuRoC_stereo.yaml
+++ b/example/euroc/EuRoC_stereo.yaml
@@ -6,16 +6,16 @@ Camera:
   setup: "stereo"
   model: "perspective"
 
-# new "rectified" matrices is the first three cols of the projection matrix which is calculated with cv::stereoRectify()
-# e.g. fx = P1[0][0] or P2[0][0], cx = P1[0][2] or P2[0][2]
-#      fy = P1[1][1] or P2[1][1], cy = P1[1][2] or P2[1][2]
+  # new "rectified" matrices is the first three cols of the projection matrix which is calculated with cv::stereoRectify()
+  # e.g. fx = P1[0][0] or P2[0][0], cx = P1[0][2] or P2[0][2]
+  #      fy = P1[1][1] or P2[1][1], cy = P1[1][2] or P2[1][2]
 
   fx: 435.2046959714599
   fy: 435.2046959714599
   cx: 367.4517211914062
   cy: 252.2008514404297
 
-# there is no distortion after stereo rectification
+  # there is no distortion after stereo rectification
 
   k1: 0.0
   k2: 0.0
@@ -23,7 +23,7 @@ Camera:
   p2: 0.0
   k3: 0.0
 
-# focal_x_baseline is -P2[0][3] which is calculated with cv::stereoRectify()
+  # focal_x_baseline is -P2[0][3] which is calculated with cv::stereoRectify()
 
   fps: 20.0
   cols: 752
@@ -39,10 +39,32 @@ Camera:
 StereoRectifier:
   K_left: [458.654, 0.0, 367.215, 0.0, 457.296, 248.375, 0.0, 0.0, 1.0]
   D_left: [-0.28340811, 0.07395907, 0.00019359, 1.76187114e-05, 0.0]
-  R_left: [0.999966347530033, -0.001422739138722922, 0.008079580483432283, 0.001365741834644127, 0.9999741760894847, 0.007055629199258132, -0.008089410156878961, -0.007044357138835809, 0.9999424675829176]
+  R_left:
+    [
+      0.999966347530033,
+      -0.001422739138722922,
+      0.008079580483432283,
+      0.001365741834644127,
+      0.9999741760894847,
+      0.007055629199258132,
+      -0.008089410156878961,
+      -0.007044357138835809,
+      0.9999424675829176,
+    ]
   K_right: [457.587, 0.0, 379.999, 0.0, 456.134, 255.238, 0.0, 0.0, 1]
   D_right: [-0.28368365, 0.07451284, -0.00010473, -3.555907e-05, 0.0]
-  R_right: [0.9999633526194376, -0.003625811871560086, 0.007755443660172947, 0.003680398547259526, 0.9999684752771629, -0.007035845251224894, -0.007729688520722713, 0.007064130529506649, 0.999945173484644]
+  R_right:
+    [
+      0.9999633526194376,
+      -0.003625811871560086,
+      0.007755443660172947,
+      0.003680398547259526,
+      0.9999684752771629,
+      -0.007035845251224894,
+      -0.007729688520722713,
+      0.007064130529506649,
+      0.999945173484644,
+    ]
 
 Preprocessing:
   min_size: 800
@@ -58,9 +80,12 @@ Mapping:
   backend: "g2o"
   baseline_dist_thr: 0.11007784219
   redundant_obs_ratio_thr: 0.9
+  erase_temporal_keyframes: false
+  num_temporal_keyframes: 15
 
 Tracking:
   backend: "g2o"
+  enable_temporal_keyframe_only_tracking: false
 
 LoopDetector:
   backend: "g2o"
