[refactoring] Remove mapping_module::is_idle_
and

- Add parameter KeyframeInserter::wait_for_local_bundle_adjustment
- Move keyframe insertion from tracking_module::track
- New async_add_keyframe allows you to wait for keyframes added to mapping_module to be processed.

--- a/example/euroc/EuRoC_mono.yaml
+++ b/example/euroc/EuRoC_mono.yaml
@@ -45,6 +45,9 @@ Tracking:
   backend: "g2o"
   enable_temporal_keyframe_only_tracking: false
 
+KeyframeInserter:
+  wait_for_local_bundle_adjustment: false
+
 Relocalizer:
   search_neighbor: true
 
